[gd_scene load_steps=39 format=3 uid="uid://i7vtjolmol5c"]

[ext_resource type="Script" path="res://scripts/player_data.gd" id="1_2o573"]
[ext_resource type="Script" path="res://scripts/camera.gd" id="1_5hvaw"]
[ext_resource type="Script" path="res://scripts/debug_commands.gd" id="1_255dg"]
[ext_resource type="Script" path="res://scripts/global_tool_settings.gd" id="1_om5vq"]
[ext_resource type="Script" path="res://scripts/player_controls.gd" id="2_3u3oc"]
[ext_resource type="Script" path="res://scripts/drawing_area.gd" id="3_c1rli"]
[ext_resource type="Script" path="res://scripts/tools/pencil_tool.gd" id="3_ovh5a"]
[ext_resource type="Script" path="res://scripts/grid_drawer.gd" id="4_swyph"]
[ext_resource type="Script" path="res://scripts/tools/eraser_tool.gd" id="4_x4p8e"]
[ext_resource type="Script" path="res://scripts/firework_controller.gd" id="6_11r1j"]
[ext_resource type="Script" path="res://scenes/tool_container.gd" id="6_bon1c"]
[ext_resource type="Script" path="res://scripts/swatch_picker.gd" id="6_f3tm5"]
[ext_resource type="Texture2D" uid="uid://bdadtlhc46gtg" path="res://sprites/pencil_button/pencil_button_normal.png" id="6_lgtbe"]
[ext_resource type="Texture2D" uid="uid://c8pmswn2xmwgj" path="res://sprites/ui.png" id="7_kl15m"]
[ext_resource type="Texture2D" uid="uid://bikaxsgews3sj" path="res://sprites/pencil_button/pencil_button_pressed.png" id="7_njtke"]
[ext_resource type="Texture2D" uid="uid://jeb7kvyq6m03" path="res://sprites/pencil_button/pencil_button_hover.png" id="8_bvipi"]
[ext_resource type="Script" path="res://scripts/flipbook_navigator.gd" id="9_2c0ij"]
[ext_resource type="Texture2D" uid="uid://bq6gi7cwviqm4" path="res://sprites/eraser_button/eraser_button_normal.png" id="9_slqom"]
[ext_resource type="Texture2D" uid="uid://cv55iteip4y4s" path="res://sprites/eraser_button/eraser_button_pressed.png" id="10_1ouoa"]
[ext_resource type="SpriteFrames" uid="uid://4gq64comsfex" path="res://animations/firework_rocket_1.tres" id="10_3sbcr"]
[ext_resource type="PackedScene" uid="uid://b4biwa2ciins5" path="res://scenes/firework.tscn" id="10_7vwu2"]
[ext_resource type="Texture2D" uid="uid://bfsrgio434vfa" path="res://sprites/eraser_button/eraser_button_hover.png" id="11_p5osm"]
[ext_resource type="AudioStream" uid="uid://bid0wb4vheshh" path="res://audio/firework_launch/launch_1.wav" id="11_ptbiw"]
[ext_resource type="AudioStream" uid="uid://cn4ww8mi2xb1n" path="res://audio/firework_explosion/explosion_1.wav" id="12_scx8a"]
[ext_resource type="SpriteFrames" uid="uid://c6amhny3q5yl7" path="res://animations/sample_explosion.tres" id="12_wq1f7"]
[ext_resource type="Texture2D" uid="uid://bmu04rh4mp3dc" path="res://sprites/selection_box.png" id="14_mhj3g"]
[ext_resource type="Texture2D" uid="uid://bufapgk85pup2" path="res://sprites/square_button/square_button_normal.png" id="16_sf2cm"]
[ext_resource type="Texture2D" uid="uid://djqnwsip1qj4u" path="res://sprites/square_button/square_button_pressed.png" id="17_0yxqt"]
[ext_resource type="Texture2D" uid="uid://b5ky4l25afiku" path="res://sprites/square_button/square_button_hover.png" id="18_7cp34"]
[ext_resource type="Texture2D" uid="uid://bojialtc8euih" path="res://sprites/long_button/long_button_normal.png" id="19_5kk4o"]
[ext_resource type="Texture2D" uid="uid://c7c6f7kj6y5ix" path="res://sprites/long_button/long_button_pressed.png" id="20_qcsgq"]
[ext_resource type="Texture2D" uid="uid://dskvwdd83tp5h" path="res://sprites/long_button/long_button_hover.png" id="21_s1po2"]
[ext_resource type="Texture2D" uid="uid://bb5oxvxyuxlvl" path="res://sprites/ui-play.png" id="22_32s78"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wqc15"]
bg_color = Color(0.652302, 0.535339, 0.499742, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vhad2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r5j4h"]
texture = ExtResource("14_mhj3g")
expand_margin_left = 7.0
expand_margin_top = 7.0
expand_margin_right = 7.0
expand_margin_bottom = 7.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2eaiv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k72q8"]

[node name="Main" type="Node2D"]

[node name="PlayModeViewportGuide" type="Marker2D" parent="."]
position = Vector2(0, -405)

[node name="PlayModeGuideViewportGuide" type="Marker2D" parent="PlayModeViewportGuide"]
position = Vector2(450, 0)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(225, 202.5)
script = ExtResource("1_5hvaw")

[node name="DebugCommands" type="Node" parent="."]
script = ExtResource("1_255dg")

[node name="CreateModeUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CreateModeUI"]
z_index = -10
layout_mode = 0
offset_right = 450.0
offset_bottom = 404.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wqc15")

[node name="UI" type="TextureRect" parent="CreateModeUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 450.0
offset_bottom = 405.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_kl15m")
metadata/_edit_lock_ = true

[node name="DrawingArea" type="TextureRect" parent="CreateModeUI"]
z_index = 1
layout_mode = 0
offset_left = 16.0
offset_top = 48.0
offset_right = 48.0
offset_bottom = 80.0
scale = Vector2(8, 8)
script = ExtResource("3_c1rli")
metadata/_edit_group_ = true

[node name="GridDrawer" type="Control" parent="CreateModeUI/DrawingArea"]
z_index = -1
anchors_preset = 0
offset_right = 1.0
offset_bottom = 1.0
script = ExtResource("4_swyph")

[node name="ToolVisibilityClip" type="Panel" parent="CreateModeUI"]
clip_contents = true
layout_mode = 0
offset_left = 276.0
offset_top = 37.0
offset_right = 351.0
offset_bottom = 140.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_vhad2")

[node name="Tools" type="Control" parent="CreateModeUI/ToolVisibilityClip"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -30.0
offset_right = 62.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_bon1c")

[node name="PencilButton" type="TextureButton" parent="CreateModeUI/ToolVisibilityClip/Tools"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.5
offset_right = 42.5
offset_bottom = 28.0
grow_horizontal = 2
texture_normal = ExtResource("6_lgtbe")
texture_pressed = ExtResource("7_njtke")
texture_hover = ExtResource("8_bvipi")

[node name="EraserButton" type="TextureButton" parent="CreateModeUI/ToolVisibilityClip/Tools"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -42.5
offset_top = -28.0
offset_right = 42.5
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("9_slqom")
texture_pressed = ExtResource("10_1ouoa")
texture_hover = ExtResource("11_p5osm")

[node name="SwatchPicker" type="Control" parent="CreateModeUI"]
layout_mode = 3
anchors_preset = 0
offset_left = 298.0
offset_top = 132.0
offset_right = 298.0
offset_bottom = 132.0
script = ExtResource("6_f3tm5")
colors = Array[Color]([Color(0, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(0, 1, 0, 1), Color(0, 0, 1, 1)])

[node name="SwatchContainer" type="GridContainer" parent="CreateModeUI/SwatchPicker"]
layout_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0

[node name="SelectionCursor" type="Panel" parent="CreateModeUI/SwatchPicker"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_r5j4h")

[node name="FlipbookNavigator" type="Control" parent="CreateModeUI"]
layout_mode = 3
anchors_preset = 0
offset_left = 16.0
offset_top = 328.0
offset_right = 272.0
offset_bottom = 392.0
script = ExtResource("9_2c0ij")
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="CreateModeUI/FlipbookNavigator"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_2eaiv")

[node name="SelectionCursor" type="Panel" parent="CreateModeUI/FlipbookNavigator/Panel"]
z_index = -1
layout_mode = 0
offset_left = 8.0
offset_top = 16.0
offset_right = 40.0
offset_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_r5j4h")

[node name="VBoxContainer" type="VBoxContainer" parent="CreateModeUI/FlipbookNavigator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSeparator3" type="HSeparator" parent="CreateModeUI/FlipbookNavigator/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
theme_override_styles/separator = SubResource("StyleBoxEmpty_k72q8")

[node name="ScrollContainer" type="ScrollContainer" parent="CreateModeUI/FlipbookNavigator/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
vertical_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CreateModeUI/FlipbookNavigator/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CreateModeUI/FlipbookNavigator/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="CreateModeUI/FlipbookNavigator/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_k72q8")

[node name="HSeparator2" type="HSeparator" parent="CreateModeUI/FlipbookNavigator/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
theme_override_styles/separator = SubResource("StyleBoxEmpty_k72q8")

[node name="FlipbookFrameControls" type="Control" parent="CreateModeUI"]
layout_mode = 3
anchors_preset = 0
offset_left = 285.0
offset_top = 315.0
offset_right = 373.0
offset_bottom = 401.0

[node name="VBoxContainer" type="GridContainer" parent="CreateModeUI/FlipbookFrameControls"]
layout_mode = 1
offset_right = 67.0
offset_bottom = 66.0
columns = 2

[node name="AddFrameButton" type="TextureButton" parent="CreateModeUI/FlipbookFrameControls/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Add new frame"
texture_normal = ExtResource("16_sf2cm")
texture_pressed = ExtResource("17_0yxqt")
texture_hover = ExtResource("18_7cp34")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="CreateModeUI/FlipbookFrameControls/VBoxContainer/AddFrameButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.5
offset_top = -17.5
offset_right = 20.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeleteSelectedFrameButton" type="TextureButton" parent="CreateModeUI/FlipbookFrameControls/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Delete current frame"
texture_normal = ExtResource("16_sf2cm")
texture_pressed = ExtResource("17_0yxqt")
texture_hover = ExtResource("18_7cp34")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="CreateModeUI/FlipbookFrameControls/VBoxContainer/DeleteSelectedFrameButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.5
offset_top = -17.5
offset_right = 20.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoveLeftButton" type="TextureButton" parent="CreateModeUI/FlipbookFrameControls/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Move current frame left"
texture_normal = ExtResource("16_sf2cm")
texture_pressed = ExtResource("17_0yxqt")
texture_hover = ExtResource("18_7cp34")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="CreateModeUI/FlipbookFrameControls/VBoxContainer/MoveLeftButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.5
offset_top = -17.5
offset_right = 20.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
text = "<"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoveRightButton" type="TextureButton" parent="CreateModeUI/FlipbookFrameControls/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Move current frame right"
texture_normal = ExtResource("16_sf2cm")
texture_pressed = ExtResource("17_0yxqt")
texture_hover = ExtResource("18_7cp34")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="CreateModeUI/FlipbookFrameControls/VBoxContainer/MoveRightButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.5
offset_top = -17.5
offset_right = 20.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
text = "> "
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayModeButton" type="TextureButton" parent="CreateModeUI"]
layout_mode = 0
offset_left = 6.0
offset_top = 2.0
offset_right = 118.0
offset_bottom = 43.0
texture_normal = ExtResource("19_5kk4o")
texture_pressed = ExtResource("20_qcsgq")
texture_hover = ExtResource("21_s1po2")

[node name="Label" type="Label" parent="CreateModeUI/PlayModeButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "^ Play Mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayModeUI" type="Node" parent="."]

[node name="UI" type="TextureRect" parent="PlayModeUI"]
z_index = 1
offset_top = -405.0
offset_right = 450.0
texture = ExtResource("22_32s78")

[node name="Panel" type="Panel" parent="PlayModeUI/UI"]
z_index = -10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wqc15")

[node name="SubViewportContainer" type="SubViewportContainer" parent="PlayModeUI"]
offset_top = -400.0
offset_right = 90.0
offset_bottom = -330.0
scale = Vector2(5, 5)

[node name="SubViewport" type="SubViewport" parent="PlayModeUI/SubViewportContainer"]
disable_3d = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
audio_listener_enable_2d = true
size = Vector2i(90, 70)
render_target_update_mode = 4

[node name="FireworkController" type="Node2D" parent="PlayModeUI/SubViewportContainer/SubViewport"]
position = Vector2(0, 32)
script = ExtResource("6_11r1j")
firework_scene = ExtResource("10_7vwu2")
rocket_animations = Array[SpriteFrames]([ExtResource("10_3sbcr")])
explosion_animations = Array[SpriteFrames]([ExtResource("12_wq1f7")])
rocket_sounds = Array[AudioStream]([ExtResource("11_ptbiw")])
explosion_sounds = Array[AudioStream]([ExtResource("12_scx8a")])

[node name="Camera2D" type="Camera2D" parent="PlayModeUI/SubViewportContainer/SubViewport"]

[node name="DrawModeButton" type="TextureButton" parent="PlayModeUI"]
offset_left = 9.0
offset_top = -45.0
offset_right = 121.0
offset_bottom = -4.0
texture_normal = ExtResource("19_5kk4o")
texture_pressed = ExtResource("20_qcsgq")
texture_hover = ExtResource("21_s1po2")

[node name="Label" type="Label" parent="PlayModeUI/DrawModeButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "V Draw Mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="TextureButton" parent="PlayModeUI"]
offset_left = 127.0
offset_top = -46.0
offset_right = 239.0
offset_bottom = -5.0
texture_normal = ExtResource("19_5kk4o")
texture_pressed = ExtResource("20_qcsgq")
texture_hover = ExtResource("21_s1po2")
stretch_mode = 0

[node name="Label" type="Label" parent="PlayModeUI/PlayButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Play "
horizontal_alignment = 1
vertical_alignment = 1

[node name="StopButton" type="TextureButton" parent="PlayModeUI"]
offset_left = 245.0
offset_top = -49.0
offset_right = 357.0
offset_bottom = -8.0
texture_normal = ExtResource("19_5kk4o")
texture_pressed = ExtResource("20_qcsgq")
texture_hover = ExtResource("21_s1po2")

[node name="Label" type="Label" parent="PlayModeUI/StopButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Stop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerData" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_2o573")

[node name="GlobalToolSettings" type="Node" parent="." node_paths=PackedStringArray("swatch_picker")]
unique_name_in_owner = true
script = ExtResource("1_om5vq")
swatch_picker = NodePath("../CreateModeUI/SwatchPicker")

[node name="PlayerControls" type="Node2D" parent="." node_paths=PackedStringArray("drawing_area", "current_tool")]
script = ExtResource("2_3u3oc")
drawing_area = NodePath("../CreateModeUI/DrawingArea")
tools = {
"eraser": NodePath("EraserTool"),
"pencil": NodePath("PencilTool")
}
current_tool = NodePath("PencilTool")

[node name="PencilTool" type="Node" parent="PlayerControls"]
script = ExtResource("3_ovh5a")

[node name="EraserTool" type="Node" parent="PlayerControls"]
script = ExtResource("4_x4p8e")

[connection signal="pressed" from="CreateModeUI/ToolVisibilityClip/Tools/PencilButton" to="PlayerControls" method="change_tool_from_name" binds= ["pencil"]]
[connection signal="pressed" from="CreateModeUI/ToolVisibilityClip/Tools/EraserButton" to="PlayerControls" method="change_tool_from_name" binds= ["eraser"]]
[connection signal="pressed" from="CreateModeUI/FlipbookFrameControls/VBoxContainer/AddFrameButton" to="PlayerData" method="append_new_frame"]
[connection signal="pressed" from="CreateModeUI/FlipbookFrameControls/VBoxContainer/DeleteSelectedFrameButton" to="PlayerData" method="delete_frame"]
[connection signal="pressed" from="CreateModeUI/FlipbookFrameControls/VBoxContainer/MoveLeftButton" to="PlayerData" method="move_selected_left"]
[connection signal="pressed" from="CreateModeUI/FlipbookFrameControls/VBoxContainer/MoveRightButton" to="PlayerData" method="move_selected_right"]
[connection signal="pressed" from="CreateModeUI/PlayModeButton" to="Camera2D" method="goto_play_mode"]
[connection signal="pressed" from="PlayModeUI/DrawModeButton" to="Camera2D" method="goto_draw_mode"]
[connection signal="pressed" from="PlayModeUI/DrawModeButton" to="PlayModeUI/SubViewportContainer/SubViewport/FireworkController" method="disable"]
[connection signal="pressed" from="PlayModeUI/PlayButton" to="PlayModeUI/SubViewportContainer/SubViewport/FireworkController" method="enable"]
[connection signal="pressed" from="PlayModeUI/StopButton" to="PlayModeUI/SubViewportContainer/SubViewport/FireworkController" method="disable"]
[connection signal="current_flipbook_changed" from="PlayerData" to="CreateModeUI/FlipbookNavigator" method="_on_current_flipbook_changed"]
[connection signal="current_frame_changed" from="PlayerData" to="CreateModeUI/DrawingArea" method="_on_current_frame_changed"]
